新界面框架首页设置完成

--- a/LincKia/Base.lproj/Main.storyboard
+++ b/LincKia/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -42,15 +42,30 @@
                                     <constraint firstAttribute="height" constant="20" id="KDk-I2-qSz"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="koK-Xz-E85">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="LIR-vI-amI" id="zeu-C5-KAH"/>
+                                    <outlet property="delegate" destination="LIR-vI-amI" id="xuP-IO-bOm"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="koK-Xz-E85" firstAttribute="leading" secondItem="YD6-01-4i6" secondAttribute="leading" id="4HR-bj-9lU"/>
+                            <constraint firstAttribute="trailing" secondItem="koK-Xz-E85" secondAttribute="trailing" id="Tdb-TV-Gj0"/>
                             <constraint firstItem="tfg-Sl-bYJ" firstAttribute="top" secondItem="YD6-01-4i6" secondAttribute="top" id="WKF-Px-owV"/>
                             <constraint firstAttribute="trailing" secondItem="tfg-Sl-bYJ" secondAttribute="trailing" id="e47-qD-pzi"/>
                             <constraint firstItem="tfg-Sl-bYJ" firstAttribute="leading" secondItem="YD6-01-4i6" secondAttribute="leading" id="pOp-K8-Spf"/>
+                            <constraint firstItem="Wib-Vn-qnT" firstAttribute="top" secondItem="koK-Xz-E85" secondAttribute="bottom" id="vft-zc-4fD"/>
+                            <constraint firstItem="koK-Xz-E85" firstAttribute="top" secondItem="14d-x8-IXt" secondAttribute="bottom" id="z8P-da-z1a"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5Vc-P0-FE1"/>
+                    <connections>
+                        <outlet property="listTableView" destination="koK-Xz-E85" id="fzG-lr-OoZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BHQ-IY-rL4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
