我的页面加入是否已登陆的判断

--- a/LincKia/Base.lproj/Main.storyboard
+++ b/LincKia/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BHQ-IY-rL4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="818" y="-140"/>
+            <point key="canvasLocation" x="752" y="-132"/>
         </scene>
         <!--登录-->
         <scene sceneID="zcW-5q-CEW">
@@ -256,7 +256,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m54-Lb-PlR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="417" y="1488"/>
+            <point key="canvasLocation" x="1171" y="906"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -277,7 +277,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-598" y="772"/>
+            <point key="canvasLocation" x="-168" y="642"/>
         </scene>
         <!--会员-->
         <scene sceneID="1Rh-js-tHD">
@@ -382,7 +382,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F8d-1m-6XU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="818" y="532"/>
+            <point key="canvasLocation" x="752" y="532"/>
         </scene>
         <!--我的-->
         <scene sceneID="3eN-tq-d2e">
@@ -404,7 +404,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XbN-wG-ukE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-598" y="1488"/>
+            <point key="canvasLocation" x="350" y="1156"/>
         </scene>
         <!--我的-->
         <scene sceneID="HPF-MK-wjw">
@@ -417,16 +417,33 @@
                     <view key="view" contentMode="scaleToFill" id="uQ3-j2-LLP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sq8-wg-V2s">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="ayo-e5-gV2" id="m3h-6B-C1k"/>
+                                    <outlet property="delegate" destination="ayo-e5-gV2" id="i76-LD-IFn"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Sq8-wg-V2s" secondAttribute="trailing" id="BWk-sa-DdV"/>
+                            <constraint firstItem="LaM-ed-0F0" firstAttribute="top" secondItem="Sq8-wg-V2s" secondAttribute="bottom" constant="64" id="aum-Hn-H3Z"/>
+                            <constraint firstItem="Sq8-wg-V2s" firstAttribute="top" secondItem="70m-hP-GSa" secondAttribute="bottom" constant="-64" id="hel-IY-nEM"/>
+                            <constraint firstItem="Sq8-wg-V2s" firstAttribute="leading" secondItem="uQ3-j2-LLP" secondAttribute="leading" id="oRh-3t-rNK"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="我的" id="3Hh-zb-VDl"/>
                     <connections>
+                        <outlet property="table" destination="Sq8-wg-V2s" id="s37-Ye-jfx"/>
                         <segue destination="3PK-Ra-LPo" kind="modal" identifier="MineToLogin" id="huh-qE-qeJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fgo-Zy-dIg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-74" y="1488"/>
+            <point key="canvasLocation" x="752" y="1162"/>
         </scene>
     </scenes>
     <resources>
@@ -445,6 +462,6 @@
         <image name="users_textfield_unclicked.png" width="292" height="52"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="gUA-3g-ppz"/>
+        <segue reference="huh-qE-qeJ"/>
     </inferredMetricsTieBreakers>
 </document>
